ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vibemap-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vibemap.ca
        - www.vibemap.ca
      secretName: vibemap-tls
  rules:
    - host: vibemap.ca
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-next-service
                port:
                  number: 3000
    - host: www.vibemap.ca
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-next-service
                port:
                  number: 3000
